// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

// buf breaking: ignore (does currently not require backward-compatibility)

syntax = "proto3";

package mz_compute_client.protocol.command;

import "cluster-client/src/client.proto";
import "compute-client/src/logging.proto";
import "compute-types/src/dataflows.proto";
import "dyncfg/src/dyncfg.proto";
import "expr/src/linear.proto";
import "expr/src/relation.proto";
import "google/protobuf/empty.proto";
import "proto/src/proto.proto";
import "repr/src/global_id.proto";
import "repr/src/row.proto";
import "service/src/params.proto";
import "storage-client/src/client.proto";
import "storage-types/src/controller.proto";
import "tracing/src/params.proto";

message ProtoComputeCommand {
  message ProtoCreateTimely {
    mz_cluster_client.client.ProtoTimelyConfig config = 1;
    mz_cluster_client.client.ProtoClusterStartupEpoch epoch = 2;
  }

  oneof kind {
    ProtoCreateTimely create_timely = 1;
    ProtoInstanceConfig create_instance = 2;
    mz_compute_types.dataflows.ProtoDataflowDescription create_dataflow = 3;
    mz_storage_client.client.ProtoCompaction allow_compaction = 4;
    ProtoPeek peek = 5;
    mz_proto.ProtoU128 cancel_peek = 6;
    google.protobuf.Empty initialization_complete = 7;
    ProtoComputeParameters update_configuration = 8;
    mz_repr.global_id.ProtoGlobalId schedule = 9;
    google.protobuf.Empty allow_writes = 10;
  }
}

message ProtoInstanceConfig {
  logging.ProtoLoggingConfig logging = 1;
  optional mz_proto.ProtoDuration expiration_offset = 2;
}

message ProtoIndexTarget {
  mz_repr.global_id.ProtoGlobalId id = 1;
}

message ProtoPersistTarget {
  mz_repr.global_id.ProtoGlobalId id = 1;
  mz_storage_types.controller.ProtoCollectionMetadata metadata = 2;
}

message ProtoPeek {
  repeated mz_repr.row.ProtoRow key = 2;
  mz_proto.ProtoU128 uuid = 3;
  uint64 timestamp = 4;
  mz_expr.relation.ProtoRowSetFinishing finishing = 5;
  mz_expr.linear.ProtoSafeMfpPlan map_filter_project = 6;
  map<string, string> otel_ctx = 7;
  oneof target {
    ProtoIndexTarget index = 8;
    ProtoPersistTarget persist = 9;
  }
}

message ProtoComputeParameters {
  optional ProtoWorkloadClass workload_class = 7;
  optional uint64 max_result_size = 1;
  mz_dyncfg.ConfigUpdates dyncfg_updates = 2;
  mz_tracing.params.ProtoTracingParameters tracing = 5;
  mz_service.params.ProtoGrpcClientParameters grpc_client = 6;
}

message ProtoWorkloadClass {
  optional string value = 1;
}
